<resources>
    <string name="app_name">TSPPSP</string>
    <string name="title_activity_timer_log">TimerLog</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_defect_log">DefectLog</string>
    <string name="title_activity_project_plan_summary">ProjectPlanSummary</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="timer">Time Log</string>
    <string name="defect">Defect Log</string>
    <string name="pps">Project Plan Summary</string>
    <string name="phase">Phase</string>
    <string name="start">Start</string>
    <string name="interruption">Interruption</string>
    <string name="stop">Stop</string>
    <string name="delta">Delta</string>
    <string name="comment">Comments</string>
    <string name="date">Date</string>
    <string name="type">Type</string>
    <string name="phaseinject">Phase Injected</string>
    <string name="phaseremoved">Phase Removed</string>
    <string name="fixtime">Fix Time</string>
    <string name="defectdescrip">Defect Description</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ingreseelnombredelproyecto">Ingrese el nombre del proyecto</string>
    <string name="guardar">Guardar</string>
    <string name="ingreseeltiempodelproyectoestimado">Ingrese el tiempo estimado del proyecto en minutos</string>


</resources>
